update workflow, update patform, remove iOS support.

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -32,8 +32,8 @@ jobs:
           ANDROID_NDK: ${{ steps.setup-ndk.outputs.ndk-path }}
         run: |
           rustup target add aarch64-linux-android armv7-linux-androideabi i686-linux-android x86_64-linux-android
-          # cargo-ndk v4 changed the platform flag: use -P (not -p) to set API level
-          cargo ndk -P 21 -t armeabi-v7a -t arm64-v8a -t x86 -t x86_64 build --release
+          # Use API level 26+ so the AAudio library is available for linking
+          cargo ndk -P 26 -t armeabi-v7a -t arm64-v8a -t x86 -t x86_64 build --release
       - name: Upload Android artifacts
         uses: actions/upload-artifact@v4
         with:
@@ -45,39 +45,8 @@ jobs:
             target/x86_64-linux-android/release/*.so
           if-no-files-found: error
 
-  ios:
-    name: Build iOS (static library)
-    runs-on: macos-14
-    steps:
-      - uses: actions/checkout@v4
-        with: { fetch-depth: 0 }
-      - name: Install Rust
-        uses: dtolnay/rust-toolchain@stable
-      - name: Add iOS targets
-        run: |
-          rustup target add aarch64-apple-ios x86_64-apple-ios aarch64-apple-ios-sim
-      - name: Build iOS static libraries
-        run: |
-          cargo build --release --target aarch64-apple-ios
-          cargo build --release --target aarch64-apple-ios-sim
-          cargo build --release --target x86_64-apple-ios
-      - name: Create XCFramework
-        run: |
-          mkdir -p ios
-          lipo -create -output ios/librust_audio_player.sim.a target/aarch64-apple-ios-sim/release/librust_audio_player.a target/x86_64-apple-ios/release/librust_audio_player.a
-          xcodebuild -create-xcframework \
-            -library target/aarch64-apple-ios/release/librust_audio_player.a \
-            -library ios/librust_audio_player.sim.a \
-            -output ios/rust_audio_player.xcframework
-      - name: Upload iOS artifacts
-        uses: actions/upload-artifact@v4
-        with:
-          name: ios-xcframework
-          path: ios/rust_audio_player.xcframework
-          if-no-files-found: error
-
   release:
-    needs: [android, ios]
+    needs: [android]
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
@@ -91,6 +60,5 @@ jobs:
         with:
           files: |
             artifacts/android-libs/*
-            artifacts/ios-xcframework/**
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
