--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ slint = { version = "1.13.1", default-features = false, features = ["backend-win
 rodio = { version = "0.21.1", features = ["symphonia-all"] }
 symphonia = { version = "0.5.4", features = ["all"] }
 rand = "0.9.2"
+ndk-glue = { version = "0.7", optional = true }
 
 [profile.release]
 opt-level = 3
@@ -27,5 +28,34 @@ crate-type = ["cdylib", "staticlib", "rlib"]
 required-features = []
 
 [package.metadata.cargo-ndk]
-targets = ["armv7-linux-androideabi", "aarch64-linux-android", "i686-linux-android", "x86_64-linux-android"]
+targets = ["armv7-linux-androideabi", "aarch64-linux-android"]
 platform = 26
+
+# Configure cargo-apk to build an installable APK
+[package.metadata.android]
+package = "com.milendenev.rustaudioplayer"
+build_targets = ["armv7-linux-androideabi", "aarch64-linux-android"]
+assets = "assets"
+apk_name = "rust-audio-player"
+
+[package.metadata.android.sdk]
+min_sdk_version = 26
+target_sdk_version = 35
+
+[package.metadata.android.application]
+label = "Rust Audio Player"
+debuggable = false
+uses_cleartext_traffic = true
+
+[package.metadata.android.application.activity]
+label = "Rust Audio Player"
+exported = true
+
+[[example]]
+name = "android_main"
+path = "examples/android_main.rs"
+crate-type = ["cdylib"]
+required-features = ["android-entry"]
+
+[features]
+android-entry = ["ndk-glue"]
