--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,7 +10,7 @@ symphonia = { version = "0.5.4", features = ["all"] }
 rand = "0.9.2"
 ndk-glue = { version = "0.7", optional = true }
 log = "0.4"
-android_logger = { version = "0.15", optional = true }
+# android_logger = { version = "0.15", optional = true }
 
 [profile.release]
 opt-level = 3
@@ -60,4 +60,5 @@ crate-type = ["cdylib"]
 required-features = ["android-entry"]
 
 [features]
-android-entry = ["ndk-glue", "android_logger"]
+# android-entry = ["ndk-glue", "android_logger"]
+android-entry = ["ndk-glue"]
